# advent-of-rust

./: .gitignore
api-reqwest/: Cargo.toml
api-reqwest/src/: main.rs
graphql-rs/: Cargo.toml  query.graphql
graphql-rs/src/: main.rs
grqphql-rs/: Cargo.toml  query.graphql  schema.graphql  sub.graphql
grqphql-rs/src/: main.rs  pinata.rs
json-rs/: Cargo.toml
json-rs/src/: main.rs
