[package]
name = "grqphql-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.14.0", features = ["full"] } # for our async runtime
graphql_client = "0.10.0" # for our GraphQL client
serde = "1.0.130" # for our GraphQL client